force-app/main/default/Objects/ContentItem__c/ContentItem__c.object-meta.xml
<CustomObject>
    <description>Individual pieces of content related to the content topic.  Each item is one format</description>
    <label>Content Item</label>
    <nameField>
        <displayFormat>CI{0000}</displayFormat>
        <label>Content Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>