force-app/main/default/Objects/ContentItem__c/fields/Content_Location__c.field-meta.xml
<CustomField>
    <fullName>Content_Location__c</fullName>
    <description>Location of the file(s) for this subject Item</description>
    <inlineHelpText>Location of the file(s) for this subject Item</inlineHelpText>
    <label>Content Location</label>
    <type>Url</type>
</CustomField>