force-app/main/default/Objects/ContentItem__c/fields/Content_Pillars__c.field-meta.xml
<CustomField>
    <fullName>Content_Pillars__c</fullName>
    <description>Which of our content pillar(s) would this content be associated with</description>
    <inlineHelpText>Which of our content pillar(s) would this content be associated with</inlineHelpText>
    <label>Content Pillars</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>SDLC</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Personal Growth</fullName>
            </value>
            <value>
                <fullName>NonProfit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>