force-app/main/default/Objects/ContentItem__c/fields/ContentTopic__c.field-meta.xml
<CustomField>
    <fullName>ContentTopic__c</fullName>
    <complianceGroup>NA</complianceGroup>
    <description>Overall topic from which content item is defined</description>
    <inlineHelpText>Overall topic from which content item is defined</inlineHelpText>
    <label>Content Topic</label>
    <referenceTo>ContentTopics__c</referenceTo>
    <relationshipLabel>Content Items</relationshipLabel>
    <relationshipName>Content_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>