force-app/main/default/Objects/ContentItem__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Date content needs to be completed</description>
    <inlineHelpText>Date content needs to be completed</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>