force-app/main/default/Objects/ContentItem__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <description>Include a call to action, ask for feedback, and use questions, polls, or quizzes.</description>
    <inlineHelpText>Include a call to action, ask for feedback, and use questions, polls, or quizzes.</inlineHelpText>
    <label>Engagement</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>