force-app/main/default/Objects/ContentItem__c/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <complianceGroup>NA</complianceGroup>
    <description>Defines what format the subject item will be in when published</description>
    <inlineHelpText>Defines what format the subject item will be in when published</inlineHelpText>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Article</fullName>
            </value>
            <value>
                <fullName>Tango</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Audio</fullName>
            </value>
            <value>
                <fullName>Infographic</fullName>
            </value>
            <value>
                <fullName>Checklist</fullName>
            </value>
            <value>
                <fullName>Course</fullName>
            </value>
            <value>
                <fullName>eBook</fullName>
            </value>
            <value>
                <fullName>Article + Video</fullName>
                <isActive>false</isActive>
                <label>Article + Video</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>