force-app/main/default/Objects/ContentItem__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <description>Length of the content item.  If it is audio or video, then this is the number of minutes.  If it is text (article, ebook, checklist), the number represents the total word count.</description>
    <inlineHelpText>Length of the content item.  If it is audio or video, then this is the number of minutes.  If it is text (article, ebook, checklist), the number represents the total word count.</inlineHelpText>
    <label>Length (mins/words)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>