force-app/main/default/Objects/ContentItem__c/fields/Primary_Objective__c.field-meta.xml
<CustomField>
    <fullName>Primary_Objective__c</fullName>
    <description>Nurturing or Marketing; Aimed to inform, entertain, educate, inspire, or persuade the audience.  Should align with broader marketing and business objectives.</description>
    <inlineHelpText>Nurturing or Marketing; Aimed to inform, entertain, educate, inspire, or persuade the audience.  Should align with broader marketing and business objectives.</inlineHelpText>
    <label>Primary Objective</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nurturing - Informative</fullName>
            </value>
            <value>
                <fullName>Nurturing - Entertaining</fullName>
            </value>
            <value>
                <fullName>Nurturing - Inspiring</fullName>
            </value>
            <value>
                <fullName>Nurturing - Persuading</fullName>
            </value>
            <value>
                <fullName>Marketing - Informative</fullName>
            </value>
            <value>
                <fullName>Marketing - Entertaining</fullName>
            </value>
            <value>
                <fullName>Marketing - Inspiring</fullName>
            </value>
            <value>
                <fullName>Marketing - Persuading</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>