force-app/main/default/Objects/ContentItem__c/fields/SEO_and_Discoverability__c.field-meta.xml
<CustomField>
    <fullName>SEO_and_Discoverability__c</fullName>
    <description>Optimizing content for search engines by incorporating relevant keywords, meta tags, and description titles.</description>
    <inlineHelpText>Optimizing content for search engines by incorporating relevant keywords, meta tags, and description titles.</inlineHelpText>
    <label>SEO and Discoverability</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>