force-app/main/default/Objects/ContentItem__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <complianceGroup>NA</complianceGroup>
    <description>Overview of the content</description>
    <inlineHelpText>Overview of the content</inlineHelpText>
    <label>Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>