force-app/main/default/Objects/ContentItem__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <complianceGroup>NA</complianceGroup>
    <description>Reference to the content</description>
    <inlineHelpText>Reference to the content</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>