force-app/main/default/Objects/ContentItem__c/fields/Total_Publications__c.field-meta.xml
<CustomField>
    <fullName>Total_Publications__c</fullName>
    <description>Number of publications for this content item</description>
    <inlineHelpText>Number of publications for this content item</inlineHelpText>
    <label>Total Publications</label>
    <summaryForeignKey>Content_Item_Publication__c.Content_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>