force-app/main/default/Objects/ContentItem__c/validationRules/Ready_to_Publish.validationRule-meta.xml
<ValidationRule>
    <fullName>Ready_to_Publish</fullName>
    <active>true</active>
    <description>Specific fields required when content item is ready to publish</description>
    <errorConditionFormula>ISPICKVAL( Status__c ,&apos;Ready to Publish&apos;) &amp;&amp;
(ISBLANK(Content_Location__c) ||
 ISBLANK(Content_Pillars__c)  ||
 ISBLANK(TEXT(Format__c)) ||
 ISBLANK( Length__c ) ||
 ISBLANK( Summary__c ) ||
 ISBLANK(TEXT(Primary_Objective__c) )||
 NOT(ISBLANK( Due_Date__c )))</errorConditionFormula>
    <errorMessage>Provide all required information and clear due date field (if not blank)</errorMessage>
</ValidationRule>