force-app/main/default/Objects/ContentItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>ContentTopic__c</columns>
    <columns>Format__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Total_Publications__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>