force-app/main/default/Objects/ContentItem__c/listViews/AllClosed.listView-meta.xml
<ListView>
    <fullName>AllClosed</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>ContentTopic__c</columns>
    <columns>Format__c</columns>
    <columns>Total_Publications__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Published</value>
    </filters>
    <label>All Closed</label>
</ListView>