force-app/main/default/Objects/ContentItem__c/listViews/AllOpen.listView-meta.xml
<ListView>
    <fullName>AllOpen</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>ContentTopic__c</columns>
    <columns>Format__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Content_Pillars__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Open</label>
</ListView>