force-app/main/default/Objects/ContentItem__c/listViews/InProgress.listView-meta.xml
<ListView>
    <fullName>InProgress</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>ContentTopic__c</columns>
    <columns>Format__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Total_Publications__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>02 In Progress</label>
</ListView>