force-app/main/default/Objects/ContentItem__c/listViews/OpenNotStarted.listView-meta.xml
<ListView>
    <fullName>OpenNotStarted</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>ContentTopic__c</columns>
    <columns>Format__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Content_Pillars__c</columns>
    <columns>Content_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started</value>
    </filters>
    <label>01 Not Started</label>
</ListView>