force-app/main/default/Objects/ContentItem__c/listViews/ReadyForReview.listView-meta.xml
<ListView>
    <fullName>ReadyForReview</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>ContentTopic__c</columns>
    <columns>Format__c</columns>
    <columns>Total_Publications__c</columns>
    <columns>Content_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ready for Review</value>
    </filters>
    <label>03 Ready for Review</label>
</ListView>