force-app/main/default/Objects/ContentItem__c/listViews/TheGuidedTrail.listView-meta.xml
<ListView>
    <fullName>TheGuidedTrail</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>ContentTopic__c</columns>
    <columns>Format__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Content_Pillars__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ContentTopic__c</field>
        <operation>contains</operation>
        <value>Guided</value>
    </filters>
    <label>The Guided Trail</label>
</ListView>